--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^3.12.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "sass": "^1.77.5"
   }
 }
